# SPI2py

./: .gitignore  README.md  config.yaml  license.txt  main.py  output.json  pyproject.toml  readme.txt  requirements.txt  workflow.py
.github/.workflows/: pytest.yml  workflow.yml
.github/workflows/: tests.yml
benchmarking/: distance.py
docs/source/: conf.py  index.rst  src.SPI2Py.analysis.rst  src.SPI2Py.data.objects.rst  src.SPI2Py.data.rst  src.SPI2Py.layout.rst  src.SPI2Py.optimization.rst  src.SPI2Py.result.rst  src.SPI2Py.result.visualization.rst  src.SPI2Py.rst  src.rst
docs/xdsm/: SPI2py_XDSM.py
examples/CubeSat/: config.yaml  input.yaml  workflow.py
examples/Ford_AFCS_Replication/: create_part_models.py  create_pointcloud.py  input.toml  workflow.py  workflow_create_part_models.py  workflow_optimize.py
examples/Ford_BEV_TMS/: create_parts.py
examples/MDBD_Representation/: mdbd_unit_cube.stl  mdbd_unit_cube.xyzr  workflow_create_part_models.py
examples/Projection/: input.toml  input_single_projection.toml  projection_workflow.py  single_projection.py
examples/Pseudo-MDBD_Representation/: create_part_models.py  mdbd_unit_cube.xyzr  unit_cube.xyzr  workflow_create_part_models.py
examples/SPI2py_Workshop_2024_04_12/: input.toml  input_PC.toml  workflow_create_parts.py  workflow_optimize.py  workflow_optimize_MDBD.py  workflow_optimize_PC.py
examples/Thingi10k/: Compressor.stl  Compressor.xyzr  Compressor_reduced.stl  Compressor_reduced.xyzr  Tesla+Module+Plastic+Side+(Website).stl  create_part_models.py  input.toml  spatial_configurations.toml  workflow.py
examples/demo_1/: config.yaml  config_demo_1.yaml  input.yaml  input_1.yaml  input_2.yaml  input_3.yaml  input_demo_1.yaml  workflow.py  workflow_demo_1.py
examples/example_1/: config.yaml  create_part_models.py  input.toml  input_demo.yaml  inputs.yaml  workflow.py
examples/example_AFCS/: create_part_models.py  input.toml  spatial_configurations.toml  workflow.py
examples/example_OpenMDAO/: workflow.py
examples/prototyping/: mdbd.py  pseudoMDBD.py  pseudoMDBD_trimesh.py  spheres.txt
examples/rolls_royce/: pseudoMDBD.py  spheres.txt  workflow.py
examples/scratch/: FEA.py  FEA_3D.py  MDBD_overlap.py  autograd_scratch.py  consistency_constraints.py  constraint_tests.py  defect_constraints.py  estimating error.py  geometry_projection_replication.py  input.toml  mapping.py  project_cylinder.py  projection.py  projection_2d.py  pseudoMDBD.py  scracth_2.py  scratch.py  sensitivity_analysis.py  (+3 more)
input/: input.json  input.yaml
inputs/: inputs.json
readme/: README.md
tests/: Test Case Illustrations.pptx  test_main
utils/: distance_calculations.py  layout_generator.py  objects.py  optimizer.py  shape_generator.py  solver.py  spherical_decomposer.py  transformations.py  visualization.py
(+430 files in other folders)
