[build-system]

requires = ["setuptools>=61.0"] 

build-backend = "setuptools.build_meta"

[project]
name = "SPI2py"
version = "0.1.0"
authors = [
  { name="Chad Peterson", email="cp44@illinois.edu" },
]
description = "Spatial packaging of interconnected systems with physical interactions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scipy",
    "networkx~=2.8.5",
    "matplotlib",
    "PyYAML",
    "numpy",
    "imageio>=2.21.1",
    "jupyter",
    "nbconvert",
    "autograd",
    "pyvista",
]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "sphinx",
]


[project.urls]
"Homepage" = "https://github.com/SPI2py/SPI2py"
"Bug Tracker" = "https://github.com/SPI2py/SPI2py/issues"